# fujinet-go-msx

./: .gitignore  CHANGELOG.md  COMPLIANCE.md  README.md  THIRD_PARTY_NOTICES.md  settings.gradle.kts  zapstore.yaml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  fujinet_android.cpp  msx_core.cpp  msx_host.cpp  msx_host.h  session_runtime.cpp  session_runtime.h
app/src/main/java/online/fujinet/go/msx/: AudioOutput.kt  EmulatorSessionService.kt  MainActivity.kt  RuntimeInstaller.kt  SessionController.kt  SettingsActivity.kt
app/src/main/java/online/fujinet/go/msx/core/: EmulatorNative.kt
app/src/main/java/online/fujinet/go/msx/fujinet/: FujiNetWebViewActivity.kt
app/src/main/java/online/fujinet/go/msx/input/: GameControllerMapper.kt  Msx.kt  MsxKeyMapper.kt
app/src/main/java/online/fujinet/go/msx/settings/: MachineProfileStore.kt  MachineSettings.kt  SystemRomStore.kt  SystemTypeStore.kt
app/src/main/java/online/fujinet/go/msx/ui/: EmulatorScreen.kt  EmulatorSurface.kt  FujiHaptics.kt  JoystickPad.kt  MsxKeyboard.kt  SettingsScreen.kt
app/src/main/java/online/fujinet/go/msx/ui/theme/: Theme.kt
app/src/main/java/org/libsdl/app/: SDLActivity.java
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/online/fujinet/go/msx/input/: MsxKeyMapperTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
tools/fujinet/: build-fujinet.sh
tools/fujinet/support/: fujinet_android_entry.cpp
tools/openmsx/: build-openmsx-core.sh
tools/openmsx/patches/: SDL2-2.30.7.diff
